<resources>
    <string name="app_name">WeatherApp</string>

    <string name="api_key">f8f0a4ca66b4dd4ccf5558985a3fbd74</string>
    <string name="web_service_url">http://api.openweathermap.org/data/2.5/forecast?q=</string>
    <string name="units">metric</string>

    <string name="weather_condition_image">A graphical representation of the weather conditions</string>
    <string name="temperature">Temperature: %.0f°C</string>
    <string name="high_temp">High: %.0f°C</string>
    <string name="low_temp">Low: %.0f°C</string>
    <string name="day_description">%1$s %2$s %3$s: %4$s</string>
    <string name="humidity">Humidity: %s</string>
    <string name="hint_text">Enter city (e.g., Boston, MA, US)</string>
    <string-array name="cities">
        <item>625144</item>
        <item>627907</item>
        <item>629634</item>
        <item>4298960</item>
        <item>2988507</item>
        <item>5245497</item>
        <item>456172</item>
    </string-array>
    <string name="threeDays">3 дня</string>
    <string name="fiveDays">5 дней</string>

    <string name="read_error">Unable to read data, or name of city is incorrect</string>
    <string name="connect_error">Unable to connect to OpenWeatherMap.org! Please, check connection!</string>
    <string name="city_exists_error">That city already exists in list</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="city_added">City was successfully added</string>

    <string name="menu_reset">Reset</string>
    <string name="menu_add">Add city to list</string>

</resources>
