<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:id="@+id/card_weather"
    card_view:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/conditionImageView"
            android:layout_width="@dimen/image_side_length_small"
            android:layout_height="match_parent"
            android:contentDescription="@string/weather_condition_image"
            android:scaleType="fitCenter"
            tools:src="@drawable/ic_no_content_black_24dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:useDefaultMargins="true"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                tools:text="@string/day_description"
                />

            <TextView
                android:id="@+id/tempTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                tools:text="@string/temperature"
                />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>