<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        />
    </android.support.design.widget.AppBarLayout>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_weight="1"
        android:columnCount="2"
        android:useDefaultMargins="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appbar">

        <ImageView
            android:id="@+id/conditionImageViewDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_rowSpan="4"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/weather_condition_image"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/dayTextViewDetails"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_rowWeight="1" />

        <TextView
            android:id="@+id/temperatureViewDetails"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_rowWeight="1" />

        <TextView
            android:id="@+id/lowTextViewDetails"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_rowWeight="1" />

        <TextView
            android:id="@+id/highTextViewDetails"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_rowWeight="1" />

        <TextView
            android:id="@+id/humidityTextViewDetails"
            android:layout_column="0"
            android:layout_row="4"
            android:layout_rowWeight="1" />
    </GridLayout>


    <RadioGroup
        android:id="@+id/countDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout">

        <RadioButton
            android:id="@+id/rbThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/threeDays" />

        <RadioButton
            android:id="@+id/rbFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fiveDays" />

    </RadioGroup>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvForecast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countDays"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>